feat: caisse centrale, ventes par conditionnement, clients/fidelite et analytics
Ajoute le flux vendeur/caissier (PENDING_PAYMENT), les prix par conditionnement POS avec snapshots, les modules clients/fidelite/analytics, les migrations schema PostgreSQL et le script SQL de purge metier.

Co-authored-by: Cursor <cursoragent@cursor.com>