@@ -1,10 +1,13 @@
 package com.erp.products.service;
 
 import com.erp.products.domain.entity.Product;
+import com.erp.products.domain.entity.ProductPackaging;
 import com.erp.products.domain.entity.ProductVariant;
+import com.erp.products.domain.enums.PosSearchMatchType;
 import com.erp.products.domain.enums.ProductStatus;
 import com.erp.products.dto.*;
 import com.erp.products.exception.ResourceNotFoundException;
+import com.erp.products.repository.ProductPackagingRepository;
 import com.erp.products.repository.ProductRepository;
 import com.erp.products.repository.ProductVariantRepository;
 import com.erp.products.repository.SaleRepository;
@@ -25,6 +28,7 @@ public class PosCatalogService {
 
     private final ProductRepository productRepository;
     private final ProductVariantRepository variantRepository;
+    private final ProductPackagingRepository packagingRepository;
     private final CategoryService categoryService;
     private final StockLedgerService ledger;
     private final SettingsService settingsService;
@@ -40,7 +44,7 @@ public class PosCatalogService {
         List<Product> products = productRepository.findAll(ProductSpecification.fromCriteria(criteria));
 
         List<PosProductResponse> mapped = products.stream()
-                .map(p -> toPosProduct(p, warehouseId))
+                .map(p -> toPosProduct(p, warehouseId, null))
                 .toList();
 
         List<PosProductResponse> promotions = mapped.stream()
@@ -61,20 +65,41 @@ public class PosCatalogService {
     }
 
     @Transactional(readOnly = true)
-    public List<PosProductResponse> search(String query, Long warehouseId, Long categoryId) {
+    public PosSearchResultResponse search(String query, Long warehouseId, Long categoryId) {
         if (query == null || query.isBlank()) {
-            return List.of();
+            return PosSearchResultResponse.builder()
+                    .matchType(PosSearchMatchType.NONE)
+                    .products(List.of())
+                    .build();
         }
         String trimmed = query.trim();
 
+        Optional<ProductPackaging> byPackagingBarcode = packagingRepository.findActiveByCodeBarre(trimmed);
+        if (byPackagingBarcode.isPresent()) {
+            ProductPackaging packaging = byPackagingBarcode.get();
+            Product product = packaging.getProduct();
+            if (product.getStatut() == ProductStatus.ACTIF) {
+                return PosSearchResultResponse.builder()
+                        .matchType(PosSearchMatchType.EXACT_PACKAGING_BARCODE)
+                        .products(List.of(toPosProduct(product, warehouseId, packaging.getId())))
+                        .build();
+            }
+        }
+
         Optional<Product> byBarcode = productRepository.findByVariantBarcode(trimmed);
         if (byBarcode.isPresent()) {
-            return List.of(toPosProduct(byBarcode.get(), warehouseId));
+            return PosSearchResultResponse.builder()
+                    .matchType(PosSearchMatchType.EXACT_BARCODE)
+                    .products(List.of(toPosProduct(byBarcode.get(), warehouseId, null)))
+                    .build();
         }
 
         Optional<Product> bySku = productRepository.findBySku(trimmed);
         if (bySku.isPresent()) {
-            return List.of(toPosProduct(bySku.get(), warehouseId));
+            return PosSearchResultResponse.builder()
+                    .matchType(PosSearchMatchType.EXACT_SKU)
+                    .products(List.of(toPosProduct(bySku.get(), warehouseId, null)))
+                    .build();
         }
 
         ProductSearchCriteria criteria = new ProductSearchCriteria();
@@ -87,23 +112,33 @@ public class PosCatalogService {
         List<Product> results = productRepository.findAll(ProductSpecification.fromCriteria(criteria));
         if (results.isEmpty()) {
             String normalized = normalize(trimmed);
-            results = productRepository.findAll(ProductSpecification.fromCriteria(criteria)).stream()
+            ProductSearchCriteria broad = new ProductSearchCriteria();
+            broad.setStatut(ProductStatus.ACTIF);
+            if (categoryId != null) {
+                broad.setCategorieId(categoryId);
+            }
+            results = productRepository.findAll(ProductSpecification.fromCriteria(broad)).stream()
                     .filter(p -> normalize(p.getNom()).contains(normalized)
                             || normalize(p.getSku()).contains(normalized))
                     .toList();
         }
 
-        return results.stream()
-                .map(p -> toPosProduct(p, warehouseId))
+        List<PosProductResponse> products = results.stream()
+                .map(p -> toPosProduct(p, warehouseId, null))
                 .limit(50)
                 .toList();
+
+        return PosSearchResultResponse.builder()
+                .matchType(products.isEmpty() ? PosSearchMatchType.NONE : PosSearchMatchType.TEXT)
+                .products(products)
+                .build();
     }
 
     @Transactional(readOnly = true)
     public PosProductResponse getProduct(Long productId, Long warehouseId) {
         Product product = productRepository.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Produit non trouve: " + productId));
-        return toPosProduct(product, warehouseId);
+        return toPosProduct(product, warehouseId, null);
     }
 
     private List<PosProductResponse> loadTopSales(Long warehouseId, int limit) {
@@ -112,12 +147,12 @@ public class PosCatalogService {
         for (Object[] row : rows) {
             Long productId = (Long) row[0];
             productRepository.findById(productId)
-                    .ifPresent(p -> result.add(toPosProduct(p, warehouseId)));
+                    .ifPresent(p -> result.add(toPosProduct(p, warehouseId, null)));
         }
         return result;
     }
 
-    private PosProductResponse toPosProduct(Product product, Long warehouseId) {
+    private PosProductResponse toPosProduct(Product product, Long warehouseId, Long matchedPackagingId) {
         BigDecimal available = warehouseId != null
                 ? ledger.getAvailable(product.getId(), null, warehouseId)
                 : ledger.getAvailable(product.getId(), null, null);
@@ -130,14 +165,24 @@ public class PosCatalogService {
         boolean promotional = product.getPrixPromotionnel() != null
                 && unitPrice.equals(product.getPrixPromotionnel());
 
-        List<String> barcodes = variantRepository.findByProductId(product.getId()).stream()
+        List<String> barcodes = new ArrayList<>(variantRepository.findByProductId(product.getId()).stream()
                 .map(ProductVariant::getCodeBarre)
                 .filter(Objects::nonNull)
                 .filter(b -> !b.isBlank())
-                .collect(Collectors.toList());
+                .toList());
+        packagingRepository.findByProductIdAndActifTrueOrderByNomAsc(product.getId()).stream()
+                .map(ProductPackaging::getCodeBarre)
+                .filter(Objects::nonNull)
+                .filter(b -> !b.isBlank())
+                .forEach(barcodes::add);
 
         String imageUrl = product.getImages() != null && !product.getImages().isEmpty()
                 ? product.getImages().get(0).getFilePath() : null;
+
+        List<PosPackagingResponse> packagings = packagingRepository
+                .findByProductIdAndActifTrueOrderByNomAsc(product.getId()).stream()
+                .map(this::toPosPackaging)
+                .toList();
 
         return PosProductResponse.builder()
                 .id(product.getId())
@@ -152,6 +197,20 @@ public class PosCatalogService {
                 .lowStock(lowStock)
                 .imageUrl(imageUrl)
                 .barcodes(barcodes)
+                .packagings(packagings)
+                .matchedPackagingId(matchedPackagingId)
+                .build();
+    }
+
+    private PosPackagingResponse toPosPackaging(ProductPackaging packaging) {
+        return PosPackagingResponse.builder()
+                .id(packaging.getId())
+                .nom(packaging.getNom())
+                .quantiteBase(packaging.getQuantiteBase())
+                .salePrice(packaging.getPrixVente())
+                .codeBarre(packaging.getCodeBarre())
+                .defaultSale(Boolean.TRUE.equals(packaging.getDefaultVente()))
+                .active(Boolean.TRUE.equals(packaging.getActif()))
                 .build();
     }
 
